# autoBodyAE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  autoBodyAE.cpp  vcpkg-configuration.json  vcpkg.json
Papyrus Scripts/: autoBodyClearMorphs.pex  autoBodyMCM.pex  autoBodyQuest.pex  autoBodyRegenSpell.pex  autoBodyUtils.pex
Papyrus Scripts/Source/: autoBodyClearMorphs.psc  autoBodyMCM.psc  autoBodyQuest.psc  autoBodyRegenSpell.psc  autoBodyUtils.psc
src/: CmakeLists.txt  Inverts.h  Plugin.h  SKEE.h  eventhandling.h  libs.h  maffs.cpp  maffs.h  main.cpp  morphman.cpp  morphman.h  papyrusfunc.cpp  papyrusfunc.h  presetmanager.cpp  presetmanager.h
